--- a/Front/authguard/package.json
+++ b/Front/authguard/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "10.0.14",
     "@angular/router": "10.0.14",
     "ajv": "^6.12.0",
+    "aws-amplify": "^3.3.7",
+    "aws-amplify-angular": "^5.0.36",
     "core-js": "^3.6.4",
     "extend": "^3.0.2",
     "handlebars": "^4.7.3",
