--- a/Front/authguard/amplify/backend/backend-config.json
+++ b/Front/authguard/amplify/backend/backend-config.json
@@ -1,1 +1,10 @@
-{}
+{
+  "auth": {
+    "authguarda0afe36c": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
+  }
+}
