--- a/Front/authguard/package.json
+++ b/Front/authguard/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "10.0.14",
     "@angular/platform-browser-dynamic": "10.0.14",
     "@angular/router": "10.0.14",
+    "@aws-amplify/ui-angular": "^0.4.11",
     "ajv": "^6.12.0",
+    "aws-amplify": "^3.3.8",
     "core-js": "^3.6.4",
     "extend": "^3.0.2",
     "handlebars": "^4.7.3",
@@ -35,9 +37,7 @@
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.5.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "aws-amplify": "^3.2.0",
-    "aws-amplify-angular": "^5.0.28"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1000.8",
