--- a/Front/authguard/tsconfig.app.json
+++ b/Front/authguard/tsconfig.app.json
@@ -2,8 +2,10 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "noImplicitAny": false,
+    "types" : ["node"],
     "outDir": "./out-tsc/app",
-    "types": [],
+    //"types": [],
     "strictPropertyInitialization": false,
   },
   "files": [
