--- a/Front/authguard/tsconfig.spec.json
+++ b/Front/authguard/tsconfig.spec.json
@@ -2,6 +2,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "noImplicitAny": false,
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
